Create mock kanji test for SubjectsClient
Created a test that tests the SubjectsClient using a mock kanji response. Wrapped all tests in a ClientTests class. Defined consts for file path and added subjects/440.json to test build folder.

--- a/WaniKaniService.Tests/WaniKaniService.Tests.csproj
+++ b/WaniKaniService.Tests/WaniKaniService.Tests.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="MockResponses\subjects\440.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="MockResponses\user.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
