Created mock collection test for SubjectsClient
Created mock kanji collection test for SubjectsClient. Added subjects\types=kanji.json to test build folder.

--- a/WaniKaniService.Tests/WaniKaniService.Tests.csproj
+++ b/WaniKaniService.Tests/WaniKaniService.Tests.csproj
@@ -22,6 +22,9 @@
     <None Update="MockResponses\subjects\440.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="MockResponses\subjects\types=kanji.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="MockResponses\user.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
