Added assignment client tests
Added assignment client tests for a single fake assignment and assignment collections

--- a/WaniKaniService.Tests/WaniKaniService.Tests.csproj
+++ b/WaniKaniService.Tests/WaniKaniService.Tests.csproj
@@ -19,6 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="MockResponses\assignments\80463006.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="MockResponses\assignments\all.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="MockResponses\subjects\440.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
